2010-10-06  Daniel Bates  <dbates@rim.com>

Reviewed by Darin Adler.

        ASSERTION FAILURE: Attempt to cast RenderObject to RenderFrameSet
        when <frameset> has CSS content property
        https://bugs.webkit.org/show_bug.cgi?id=47314

        Fixes an issue where sending a mouse event to an HTML Frameset Element that
        whose content was replaced via the CSS content property causes an assertion
        failure.

        By default, HTMLFrameSetElement forwards mouse events to RenderFrameSet so as
        to support resizing a frame within the set. When a <frameset> specifies an
        image in its CSS content property we create a generic render object (RenderObject)
        for the frame set instead of a RenderFrameSet object. The event handler code
        in HTMLFrameSetElement calls WebCore::toRenderFrameSet() to cast its renderer
        to type RenderFrameSet, which fails. To correct this, HTMLFrameSetElement
        must check that its renderer is of type RenderFrameSet before casting to this type.

        Test: fast/frames/crash-frameset-CSS-content-property.html

        * html/HTMLFrameSetElement.cpp:
        (WebCore::HTMLFrameSetElement::defaultEventHandler): Check that our renderer is
        of type RenderFrameSet before casting it as such.
2010-10-06  Daniel Bates  <dbates@rim.com>

        Reviewed by Darin Adler.

        ASSERTION FAILURE: Attempt to cast RenderObject to RenderFrameSet
        when <frameset> has CSS content property
        https://bugs.webkit.org/show_bug.cgi?id=47314

        Test to ensure that we don't crash when clicking on a <frameset> that specifies the CSS content property.

        * fast/frames/crash-frameset-CSS-content-property-expected.txt: Added.
        * fast/frames/crash-frameset-CSS-content-property.html: Added.


Canonical link: https://commits.webkit.org/59859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69256 268f45cc-cd09-0410-ab3c-d52691b4dbfc